add pagination with angular for posts list

--- a/frontend/app/weblog_index.html
+++ b/frontend/app/weblog_index.html
@@ -51,7 +51,7 @@
     <nav role="navigation">
     <ul id="menu">
         <li><a href="/portfolios/">Portfolios</a></li>
-        <li><a href="/weblog/">Weblog</a></li>
+        <li><a href="/weblog">Weblog</a></li>
         <li><a href="/contact/">Contact</a></li>
         <li><a href="/librairy/">Librairy</a></li>
         <li><a href="/admin/">Admin</a></li>
