--- a/frontend/app/weblog_index.html
+++ b/frontend/app/weblog_index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Weblog, Phiroom, le CMS des photographes</title>
     <meta charset="utf-8" />
+    <base href="/weblog/">
 
     <!-- PROD: for production only -->
     <!--<link rel="stylesheet" href="/assets/css/weblog.min.css" /> PROD -->
