--- a/frontend/app/weblog_index.html
+++ b/frontend/app/weblog_index.html
@@ -65,7 +65,7 @@
 <footer role="contentinfo">
     <p id="powered"><a target="_blank" href="http://phiroom.org">Powered by Phiroom</a></p>
 </footer>
-<!-- <div id="admin-overlay" ng-show="edit"></div> -->
+<div id="admin-overlay" ng-show="admin"></div>
 
 </body>
 </html>
