--- a/statics/index.html
+++ b/statics/index.html
@@ -28,7 +28,7 @@
 <!-- for developpment, remove on production -->
 <script src="/assets/bower_components/angular/angular.js"></script>
 <script src="/assets/bower_components/angular-animate/angular-animate.js"></script>
-<script src="/assets/bower_components/angular-route/angular-route.js"></script>
+<script src="/assets/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="/assets/bower_components/angular-resource/angular-resource.js"></script>
 <script src="/assets/bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="/assets/js/phiroomApp.js"></script>
@@ -37,7 +37,12 @@
 <!-- remove on production -->
 <script src="/assets/bower_components/less/dist/less.min.js" type="text/javascript"></script><!-- DEVEL less compilation client side -->
 
+<body>
+<ui-view>
+    <i>Some content will load here!</i>
+</ui-view>
 
+</body>
 
 
 
