--- a/statics/index.html
+++ b/statics/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Weblog, Phiroom, le CMS des photographes</title>
     <meta charset="utf-8" />
-    <base href="/weblog/">
+    <base href="/">
 
     <!-- PROD: for production only -->
     <!--<link rel="stylesheet" href="/assets/css/weblog.min.css" /> PROD -->
@@ -34,6 +34,9 @@
 <script src="/assets/js/phiroomApp.js"></script>
 <script src="/assets/js/weblog/controllers/weblogListCtrl.js"></script>
 <script src="/assets/js/weblog/controllers/weblogDetailCtrl.js"></script>
+<script src="/assets/js/librairy/controllers/librairyCtrl.js"></script>
+<script src="/assets/js/librairy/controllers/librairyListCtrl.js"></script>
+<script src="/assets/js/librairy/controllers/librairyDetailCtrl.js"></script>
 <!-- remove on production -->
 <script src="/assets/bower_components/less/dist/less.min.js" type="text/javascript"></script><!-- DEVEL less compilation client side -->
 
