--- a/statics/index.html
+++ b/statics/index.html
@@ -9,7 +9,7 @@
     <!--<link rel="stylesheet" href="/assets/css/weblog.min.css" /> PROD -->
 
     <!-- DEVEL: for development only -->
-    <link rel="stylesheet/less" href="/assets/css/weblog-controller.less" /><!-- DEVEL -->
+    <link rel="stylesheet/less" href="/assets/css/controller.less" /><!-- DEVEL -->
 
     <link rel="icon" type="image/png" href="/assets/img/phiroom-favicon.png" />
     <link
@@ -41,11 +41,7 @@
 <!-- remove on production -->
 <script src="/assets/bower_components/less/dist/less.min.js" type="text/javascript"></script><!-- DEVEL less compilation client side -->
 
-<body>
-<div ui-view>
-    <i>Some content will load here!</i>
-</div>
-
+<body id="{{ page_info.name }}" ui-view>
 </body>
 
 
