--- a/statics/index.html
+++ b/statics/index.html
@@ -38,6 +38,7 @@
 <script src="/assets/js/librairy/controllers/librairyCtrl.js"></script>
 <script src="/assets/js/librairy/controllers/librairyGridCtrl.js"></script>
 <script src="/assets/js/librairy/controllers/librairySingleCtrl.js"></script>
+<script src="/assets/js/librairy/services/phListPictures.js"></script>
 <script src="/assets/js/librairy/services/phSelection.js"></script>
 <script src="/assets/js/librairy/services/phRate.js"></script>
 <script src="/assets/js/librairy/filters/range.js"></script>
