--- a/statics/index.html
+++ b/statics/index.html
@@ -26,6 +26,7 @@
 <!-- for production -->
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script> angularjs from google cdn -->
 <!-- for developpment, remove on production -->
+<script src="/assets/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="/assets/bower_components/angular/angular.js"></script>
 <script src="/assets/bower_components/angular-animate/angular-animate.js"></script>
 <script src="/assets/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -43,6 +44,7 @@
 <script src="/assets/js/librairy/services/phRate.js"></script>
 <script src="/assets/js/librairy/filters/range.js"></script>
 <script src="/assets/js/librairy/filters/ordermark.js"></script>
+<script src="/assets/js/librairy/animations/toogleAnimation.js"></script>
 
 <!-- remove on production -->
 <script src="/assets/bower_components/less/dist/less.min.js" type="text/javascript"></script><!-- DEVEL less compilation client side -->
