--- a/statics/index.html
+++ b/statics/index.html
@@ -49,7 +49,9 @@
 <!-- remove on production -->
 <script src="/assets/bower_components/less/dist/less.min.js" type="text/javascript"></script><!-- DEVEL less compilation client side -->
 
-<body id="{{ page_info.name }}" ui-view>
+<body id="{{ page_info.name }}">
+    <ui-view/>
+    <div id="admin-overlay" ng-show="admin"><ui-view="admin"/></div>
 </body>
 
 
