add a (unfinished) drag directive.

--- a/statics/index.html
+++ b/statics/index.html
@@ -21,6 +21,7 @@
 
 <!-- js files -->
 
+
 <!-- angularjs admin files go here -->
 
 <!-- for production -->
@@ -43,6 +44,7 @@
 <script src="/assets/js/librairy/services/phPatcher.js"></script>
 <script src="/assets/js/librairy/services/phSelection.js"></script>
 <script src="/assets/js/librairy/services/phRate.js"></script>
+<script src="/assets/js/librairy/directives/phDrag.js"></script>
 <script src="/assets/js/librairy/filters/range.js"></script>
 <script src="/assets/js/librairy/filters/ordermark.js"></script>
 <script src="/assets/js/librairy/animations/toogleAnimation.js"></script>
