add drop directive.

--- a/statics/index.html
+++ b/statics/index.html
@@ -45,6 +45,7 @@
 <script src="/assets/js/librairy/services/phSelection.js"></script>
 <script src="/assets/js/librairy/services/phRate.js"></script>
 <script src="/assets/js/librairy/directives/phDrag.js"></script>
+<script src="/assets/js/librairy/directives/phDrop.js"></script>
 <script src="/assets/js/librairy/filters/range.js"></script>
 <script src="/assets/js/librairy/filters/ordermark.js"></script>
 <script src="/assets/js/librairy/animations/toogleAnimation.js"></script>
