--- a/statics/index.html
+++ b/statics/index.html
@@ -40,6 +40,7 @@
 <script src="/assets/js/librairy/controllers/librairyCtrl.js"></script>
 <script src="/assets/js/librairy/controllers/librairyGridCtrl.js"></script>
 <script src="/assets/js/librairy/controllers/librairySingleCtrl.js"></script>
+<script src="/assets/js/librairy/services/phUtils.js"></script>
 <script src="/assets/js/librairy/services/phListPictures.js"></script>
 <script src="/assets/js/librairy/services/phFolder.js"></script>
 <script src="/assets/js/librairy/services/phPatcher.js"></script>
