--- a/statics/index.html
+++ b/statics/index.html
@@ -32,6 +32,9 @@
 <script src="/assets/bower_components/angular-animate/angular-animate.js"></script>
 <script src="/assets/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="/assets/bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="/assets/bower_components/ui-router-extras/release/modular/ct-ui-router-extras.core.min.js"></script>
+<script src="/assets/bower_components/ui-router-extras/release/modular/ct-ui-router-extras.sticky.min.js"></script>
+<script src="/assets/bower_components/ui-router-extras/release/modular/ct-ui-router-extras.previous.min.js"></script>
 <script src="/assets/js/phiroomApp.js"></script>
 <script src="/assets/js/mainCtrl.js"></script>
 <script src="/assets/js/weblog/controllers/weblogListCtrl.js"></script>
@@ -54,8 +57,19 @@
 <script src="/assets/bower_components/less/dist/less.min.js" type="text/javascript"></script><!-- DEVEL less compilation client side -->
 
 <body id="{{ page_info.name }}">
-    <ui-view/>
-    <div id="admin-overlay" ng-show="admin"><ui-view="admin"/></div>
+    <ui-view></ui-view>
+        <section id="modal" ng-show="modal.show">
+            <header>
+                <h1>Modal</h1>
+                <button class="close" ng-click="modal.show = false">×</button>
+            </header>
+            <div id="modal-content">
+                my nice content
+            </div>
+            <footer>
+            </footer>
+        </section><!-- admin-modal -->
+    <div id="modal-overlay" ng-show="modal.show" ng-click="modal.show = false"></div>
 </body>
 
 
