add back controller librairyCreateFolder.

--- a/statics/index.html
+++ b/statics/index.html
@@ -43,6 +43,7 @@
 <script src="/assets/js/librairy/controllers/librairyCtrl.js"></script>
 <script src="/assets/js/librairy/controllers/librairyGridCtrl.js"></script>
 <script src="/assets/js/librairy/controllers/librairySingleCtrl.js"></script>
+<script src="/assets/js/librairy/controllers/librairyCreateFolderCtrl.js"></script>
 <script src="/assets/js/librairy/services/phUtils.js"></script>
 <script src="/assets/js/librairy/services/phListPictures.js"></script>
 <script src="/assets/js/librairy/services/phFolder.js"></script>
