add independant array for files in uploader preview area.

--- a/statics/index.html
+++ b/statics/index.html
@@ -57,6 +57,7 @@
 <script src="/assets/js/librairy/directives/phDrag.js"></script>
 <script src="/assets/js/librairy/directives/phDrop.js"></script>
 <script src="/assets/js/librairy/directives/phFilePreview.js"></script>
+<script src="/assets/js/librairy/directives/phUploaderFileModel.js"></script>
 <script src="/assets/js/librairy/filters/phRange.js"></script>
 <script src="/assets/js/librairy/animations/toogleAnimation.js"></script>
 
