add drag and drop support to picture uploader.

--- a/statics/index.html
+++ b/statics/index.html
@@ -40,6 +40,7 @@
 <script src="/assets/js/common/services/phModal.js"></script>
 <script src="/assets/js/common/services/phFileUpload.js"></script>
 <script src="/assets/js/common/directives/phFileModel.js"></script>
+<script src="/assets/js/common/directives/phDropFile.js"></script>
 <script src="/assets/js/common/directives/phHiddenFileModel.js"></script>
 <script src="/assets/js/weblog/controllers/weblogListCtrl.js"></script>
 <script src="/assets/js/weblog/controllers/weblogDetailCtrl.js"></script>
