improve uploader: add css, display of pictures' title and weight and a function to delete them from area.

--- a/statics/index.html
+++ b/statics/index.html
@@ -42,6 +42,7 @@
 <script src="/assets/js/common/directives/phFileModel.js"></script>
 <script src="/assets/js/common/directives/phDropFile.js"></script>
 <script src="/assets/js/common/directives/phHiddenFileModel.js"></script>
+<script src="/assets/js/common/filters/phBytes.js"></script>
 <script src="/assets/js/weblog/controllers/weblogListCtrl.js"></script>
 <script src="/assets/js/weblog/controllers/weblogDetailCtrl.js"></script>
 <script src="/assets/js/librairy/controllers/librairyCtrl.js"></script>
