--- a/statics/index.html
+++ b/statics/index.html
@@ -6,7 +6,7 @@
     <base href="/">
 
     <!-- PROD: for production only -->
-    <!--<link rel="stylesheet" href="/assets/css/weblog.min.css" /> PROD -->
+    <!--<link rel="stylesheet" href="/assets/css/phiroom.min.css" /> PROD -->
 
     <!-- DEVEL: for development only -->
     <link rel="stylesheet/less" href="/assets/css/controller.less" /><!-- DEVEL -->
@@ -19,14 +19,7 @@
         href = ""
     />
 
-<!-- js files -->
-
-
-<!-- angularjs admin files go here -->
-
-<!-- for production -->
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script> angularjs from google cdn -->
-<!-- for developpment, remove on production -->
+<!-- librairys -->
 <script src="/assets/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="/assets/bower_components/angular/angular.js"></script>
 <script src="/assets/bower_components/angular-animate/angular-animate.js"></script>
@@ -35,18 +28,19 @@
 <script src="/assets/bower_components/ui-router-extras/release/modular/ct-ui-router-extras.core.min.js"></script>
 <script src="/assets/bower_components/ui-router-extras/release/modular/ct-ui-router-extras.sticky.min.js"></script>
 <script src="/assets/bower_components/ui-router-extras/release/modular/ct-ui-router-extras.previous.min.js"></script>
+<!-- Phiroom application -->
 <script src="/assets/js/phiroomApp.js"></script>
-<script src="/assets/js/common/mainCtrl.js"></script>
-<script src="/assets/js/common/services/phUtils.js"></script>
-<script src="/assets/js/common/services/phModal.js"></script>
-<script src="/assets/js/common/services/phFileUpload.js"></script>
-<script src="/assets/js/common/directives/phFileModel.js"></script>
-<script src="/assets/js/common/directives/phDropFile.js"></script>
-<script src="/assets/js/common/directives/phHiddenFileModel.js"></script>
-<script src="/assets/js/common/filters/phBytes.js"></script>
-<script src="/assets/js/common/filters/phRange.js"></script>
-<script src="/assets/js/weblog/controllers/weblogListCtrl.js"></script>
-<script src="/assets/js/weblog/controllers/weblogDetailCtrl.js"></script>
+<!-- Phiroom core module -->
+<script src="/assets/js/core/controllers/mainCtrl.js"></script>
+<script src="/assets/js/core/services/phUtils.js"></script>
+<script src="/assets/js/core/services/phModal.js"></script>
+<script src="/assets/js/core/services/phFileUpload.js"></script>
+<script src="/assets/js/core/directives/phFileModel.js"></script>
+<script src="/assets/js/core/directives/phDropFile.js"></script>
+<script src="/assets/js/core/directives/phHiddenFileModel.js"></script>
+<script src="/assets/js/core/filters/phBytes.js"></script>
+<script src="/assets/js/core/filters/phRange.js"></script>
+<!-- Phiroom librairy module -->
 <script src="/assets/js/librairy/controllers/librairyCtrl.js"></script>
 <script src="/assets/js/librairy/controllers/librairyGridCtrl.js"></script>
 <script src="/assets/js/librairy/controllers/librairySingleCtrl.js"></script>
@@ -62,6 +56,9 @@
 <script src="/assets/js/librairy/directives/phDrop.js"></script>
 <script src="/assets/js/librairy/directives/phFilePreview.js"></script>
 <script src="/assets/js/librairy/animations/toogleAnimation.js"></script>
+<!-- Phiroom weblog module -->
+<script src="/assets/js/weblog/controllers/weblogListCtrl.js"></script>
+<script src="/assets/js/weblog/controllers/weblogDetailCtrl.js"></script>
 
 <!-- remove on production -->
 <script src="/assets/bower_components/less/dist/less.min.js" type="text/javascript"></script><!-- DEVEL less compilation client side -->
