add phUser service with tests.

--- a/statics/index.html
+++ b/statics/index.html
@@ -40,6 +40,8 @@
 <script src="/assets/js/core/directives/phHiddenFileModel.js"></script>
 <script src="/assets/js/core/filters/phBytes.js"></script>
 <script src="/assets/js/core/filters/phRange.js"></script>
+<!-- Phiroom user module -->
+<script src="/assets/js/user/services/phUser.js"></script>
 <!-- Phiroom librairy module -->
 <script src="/assets/js/librairy/controllers/librairyCtrl.js"></script>
 <script src="/assets/js/librairy/controllers/librairyGridCtrl.js"></script>
