--- a/statics/index.html
+++ b/statics/index.html
@@ -42,6 +42,7 @@
 <script src="/assets/js/core/filters/phRange.js"></script>
 <!-- Phiroom user module -->
 <script src="/assets/js/user/services/phUser.js"></script>
+<script src="/assets/js/user/controllers/userLoginCtrl.js"></script>
 <!-- Phiroom librairy module -->
 <script src="/assets/js/librairy/controllers/librairyCtrl.js"></script>
 <script src="/assets/js/librairy/controllers/librairyGridCtrl.js"></script>
