update weblog default state.

--- a/statics/index.html
+++ b/statics/index.html
@@ -60,6 +60,7 @@
 <script src="/assets/js/librairy/directives/phFilePreview.js"></script>
 <script src="/assets/js/librairy/animations/toogleAnimation.js"></script>
 <!-- Phiroom weblog module -->
+<script src="/assets/js/weblog/controllers/weblogCtrl.js"></script>
 <script src="/assets/js/weblog/controllers/weblogListCtrl.js"></script>
 <script src="/assets/js/weblog/controllers/weblogDetailCtrl.js"></script>
 
