add back weblog list frontend.

--- a/statics/index.html
+++ b/statics/index.html
@@ -63,6 +63,7 @@
 <script src="/assets/js/weblog/controllers/weblogCtrl.js"></script>
 <script src="/assets/js/weblog/controllers/weblogListCtrl.js"></script>
 <script src="/assets/js/weblog/controllers/weblogDetailCtrl.js"></script>
+<script src="/assets/js/weblog/services/phListPosts.js"></script>
 
 <!-- remove on production -->
 <script src="/assets/bower_components/less/dist/less.min.js" type="text/javascript"></script><!-- DEVEL less compilation client side -->
