add a phSettings service.

--- a/statics/index.html
+++ b/statics/index.html
@@ -32,6 +32,7 @@
 <script src="/assets/js/phiroomApp.js"></script>
 <!-- Phiroom core module -->
 <script src="/assets/js/core/controllers/mainCtrl.js"></script>
+<script src="/assets/js/core/services/phSettings.js"></script>
 <script src="/assets/js/core/services/phUtils.js"></script>
 <script src="/assets/js/core/services/phModal.js"></script>
 <script src="/assets/js/core/services/phFileUpload.js"></script>
