--- a/statics/index.html
+++ b/statics/index.html
@@ -69,9 +69,10 @@
 <!-- remove on production -->
 <script src="/assets/bower_components/less/dist/less.min.js" type="text/javascript"></script><!-- DEVEL less compilation client side -->
 
-<body id="{{ page_info.name }}" >
+<body id="{{ page_info.name }}" ng-class="{modal_show: modal.show}">
     <ui-view></ui-view>
-    <section id="modal" ng-show="modal.show"
+    <div id="modal-wrapper" ng-show="modal.show">
+    <section id="modal"
         ng-class="{max_modal: modal.max_window,
                    small_modal: modal.small_window,
                    large_modal: modal.large_window, 
@@ -79,12 +80,13 @@
                    dark: modal.dark}">
         <header>
             <h1>{{ modal.title }}</h1>
-            <button class="close" ng-click="modal.close()" ng-if="modal.cancellable">×</button>
+            <button class="close" ng-click="modal.close()" ng-if="modal.closable">×</button>
         </header>
         <div id="modal-content">
             <div ng-include="modal.templateUrl"></div>
         </div>
     </section><!-- admin-modal -->
+    </div><!-- modal-wrapper -->
     <div id="modal-overlay" ng-show="modal.show"></div>
 </body>
 
