add a form to create new post.

--- a/statics/index.html
+++ b/statics/index.html
@@ -64,6 +64,7 @@
 <script src="/assets/js/weblog/controllers/weblogCtrl.js"></script>
 <script src="/assets/js/weblog/controllers/weblogListCtrl.js"></script>
 <script src="/assets/js/weblog/controllers/weblogDetailCtrl.js"></script>
+<script src="/assets/js/weblog/controllers/weblogPostFormCtrl.js"></script>
 <script src="/assets/js/weblog/services/phPost.js"></script>
 
 <!-- remove on production -->
