start frontend tags app.

--- a/statics/index.html
+++ b/statics/index.html
@@ -39,6 +39,7 @@
 <script src="/assets/js/core/directives/phFileModel.js"></script>
 <script src="/assets/js/core/directives/phDropFile.js"></script>
 <script src="/assets/js/core/directives/phHiddenFileModel.js"></script>
+<script src="/assets/js/core/directives/phPushModel.js"></script>
 <script src="/assets/js/core/filters/phBytes.js"></script>
 <script src="/assets/js/core/filters/phRange.js"></script>
 <!-- Phiroom user module -->
@@ -66,6 +67,7 @@
 <script src="/assets/js/weblog/controllers/weblogDetailCtrl.js"></script>
 <script src="/assets/js/weblog/controllers/weblogPostFormCtrl.js"></script>
 <script src="/assets/js/weblog/services/phPost.js"></script>
+<script src="/assets/js/weblog/services/phTag.js"></script>
 
 <!-- remove on production -->
 <script src="/assets/bower_components/less/dist/less.min.js" type="text/javascript"></script><!-- DEVEL less compilation client side -->
