broken attempt to include fade in lightbox.

--- a/statics/index.html
+++ b/statics/index.html
@@ -72,6 +72,7 @@
 <script src="/assets/js/weblog/services/phTag.js"></script>
 <script src="/assets/js/lightbox/controllers/lightboxCtrl.js"></script>
 <script src="/assets/js/lightbox/services/phLightbox.js"></script>
+<script src="/assets/js/lightbox/directives/phViewPortCenter.js"></script>
 <script src="/assets/js/lightbox/directives/phVisibleMaxHeight.js"></script>
 
 <!-- remove on production -->
