fix a small bug in lightbox, remove modal fadeInOut

--- a/statics/index.html
+++ b/statics/index.html
@@ -95,7 +95,7 @@
         </div>
     </section><!-- admin-modal -->
     </div><!-- modal-wrapper -->
-    <div id="modal-overlay" class="fade-in-out" ng-show="modal.show"></div>
+    <div id="modal-overlay" ng-show="modal.show"></div>
 </body>
 
 
