refactoring of phPost, add phPostDelete.

--- a/statics/index.html
+++ b/statics/index.html
@@ -68,6 +68,7 @@
 <script src="/assets/js/weblog/controllers/weblogListCtrl.js"></script>
 <script src="/assets/js/weblog/controllers/weblogDetailCtrl.js"></script>
 <script src="/assets/js/weblog/controllers/weblogPostFormCtrl.js"></script>
+<script src="/assets/js/weblog/controllers/weblogPostDeleteCtrl.js"></script>
 <script src="/assets/js/weblog/services/phPost.js"></script>
 <script src="/assets/js/weblog/services/phTag.js"></script>
 <script src="/assets/js/lightbox/controllers/lightboxCtrl.js"></script>
