improve picture deletion service, add css.

--- a/statics/index.html
+++ b/statics/index.html
@@ -54,6 +54,7 @@
 <script src="/assets/js/librairy/controllers/librairySingleCtrl.js"></script>
 <script src="/assets/js/librairy/controllers/librairyCreateFolderCtrl.js"></script>
 <script src="/assets/js/librairy/controllers/librairyUploaderCtrl.js"></script>
+<script src="/assets/js/librairy/controllers/librairyPictureDeleteCtrl.js"></script>
 <script src="/assets/js/librairy/services/phPicture.js"></script>
 <script src="/assets/js/librairy/services/phFolder.js"></script>
 <script src="/assets/js/librairy/services/phUploader.js"></script>
