add ordering directive in librairy, still not working.

--- a/statics/index.html
+++ b/statics/index.html
@@ -63,6 +63,7 @@
 <script src="/assets/js/librairy/services/phRate.js"></script>
 <script src="/assets/js/librairy/directives/phDrag.js"></script>
 <script src="/assets/js/librairy/directives/phDrop.js"></script>
+<script src="/assets/js/librairy/directives/phOrder.js"></script>
 <script src="/assets/js/librairy/directives/phFilePreview.js"></script>
 <script src="/assets/js/librairy/directives/phJustifyThumbs.js"></script>
 <!-- Phiroom weblog module -->
