--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title></title>
-    <meta charset="utf-8" />
-    <base href="/">
-    <link rel="stylesheet" href="/assets/css/phiroom.min.css" />
+  <title></title>
+  <meta charset="utf-8" />
+  <base href="/">
+  <link rel="stylesheet" href="/assets/css/phiroom.min.css" />
 
-    <link rel="icon" type="image/png" href="/assets/images/phiroom-favicon.png" />
+  <link rel="icon" type="image/png" href="/assets/images/phiroom-favicon.png" />
     
-    <link
-        rel = "alternate"
-        type = "application/atom+xml"
-        title = ""
-        href = ""
-    />
-
 
 
 </head>
 <body>
+  <div id="root">
+  </div>
+<script src="/static/bundle.js"></script>
 </body>
 
-<script src="/static/bundle.js"></script>
 </html>
 
